# drone-chore

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
resources/: waypoints.json  waypoints2.json  waypoints3.json
resources/shaders/: gizmos.frag  gizmos.vert  simple.frag  simple.vert  skybox.vert
source/: main.cpp
source/core/: Engine.cpp  Engine.h
source/core/graphics/: Camera.cpp  Camera.h  Drone.cpp  Drone.h  Gizmos.cpp  Gizmos.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Node.cpp  Node.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Skybox.cpp  Skybox.h
source/core/io/: FileIO.cpp  FileIO.h  Window.cpp  Window.h
source/patterns/events/: KeyboardEvent.h  MouseDragEvent.h  RenderModeEvent.h
